--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mhd_virtual_table
-description: Virtual table for MHD in Bratislava.
-version: 0.0.1+1
+description: App with list of virtual tables for MHD in Bratislava.
+version: 0.0.6
 authors: 
 - magicsk.eu <support@magicsk.eu>
 
@@ -15,7 +15,9 @@ dependencies:
   permission_handler: '^3.1.0'
   http: ^0.12.0+2
   diacritic: ^0.1.1
+  draggable_scrollbar: ^0.0.4
   geolocator: ^5.0.0
+  path_provider: ^1.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
