--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mhd_virtual_table
 description: App with list of virtual tables for MHD in Bratislava.
-version: 0.0.6
+version: 0.8.2
 authors: 
 - magicsk.eu <support@magicsk.eu>
 
@@ -18,6 +18,8 @@ dependencies:
   draggable_scrollbar: ^0.0.4
   geolocator: ^5.0.0
   path_provider: ^1.1.2
+  easy_alert: ^0.0.2
+  connectivity: ^0.4.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
