--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,10 @@ dependencies:
   path_provider: ^1.1.2
   easy_alert: ^0.0.2
   connectivity: ^0.4.2
-  dynamic_theme: ^1.0.1
+  persist_theme: ^1.5.1
   shared_preferences: ^0.5.3+2
+  provider: ^3.0.0+1
+  scoped_model: ^1.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
