--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,7 +55,10 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
