--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: mhd_virtual_table
 description: App with list of virtual tables for MHD in Bratislava.
-version: 0.9.0
+version: 0.9.9
 authors: 
 - magicsk.eu <support@magicsk.eu>
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -13,7 +13,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.15.1
-  flutter_webview_plugin: ^0.3.5
+  flutter_webview_plugin: ^0.3.7
   webview_flutter: ^0.3.9+1
   permission_handler: '^3.1.0'
   http: ^0.12.0+2
@@ -32,6 +32,9 @@ dependencies:
   firebase_analytics: ^5.0.2
   cupertino_icons: ^0.1.2
   flutter_cupertino_localizations: ^1.0.1
+  flutter_typeahead: ^1.7.0
+  loading_overlay: ^0.2.0
+  native_color: ^1.0.0
 
 dev_dependencies:
   flutter_test:
