--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   loading_overlay: ^0.2.0
   native_color: ^1.0.0
   animated_list_view: ^0.1.1
+  flutter_dotenv: ^2.1.0
 
 dev_dependencies:
   flutter_test:
