--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: mhd_virtual_table
 description: App with list of virtual tables for MHD in Bratislava.
-version: 1.1.3
-authors: 
-- magicsk.eu <support@magicsk.eu>
+version: 1.1.5
+authors:
+  - magicsk.eu <support@magicsk.eu>
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -13,9 +13,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.16.0
-  flutter_webview_plugin: ^0.3.7
+  flutter_webview_plugin: ^0.3.11
   webview_flutter: ^0.3.9+1
-  permission_handler: '^3.1.0'
+  permission_handler: "^3.1.0"
   http: ^0.12.0+2
   diacritic: ^0.1.1
   draggable_scrollbar: ^0.0.4
@@ -28,8 +28,8 @@ dependencies:
   provider: ^3.0.0+1
   scoped_model: ^1.0.1
   preferences: ^4.0.0
-#  firebase_core: ^0.4.0+9
-#  firebase_analytics: ^5.0.2
+  #  firebase_core: ^0.4.0+9
+  #  firebase_analytics: ^5.0.2
   cupertino_icons: ^0.1.2
   flutter_cupertino_localizations: ^1.0.1
   flutter_typeahead: ^1.7.0
@@ -37,12 +37,12 @@ dependencies:
   native_color: ^1.0.0
   animated_list_view: ^0.1.1
   flutter_dotenv: ^2.1.0
+  url_launcher: ^5.4.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   intl_translation: ^0.17.5
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -50,6 +50,7 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
+    - .env
     - assets/google/powered_by_google_on_non_white.png
     - assets/google/2.0x/powered_by_google_on_non_white.png
     - assets/google/3.0x/powered_by_google_on_non_white.png
@@ -61,18 +62,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
