--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,11 @@ dependencies:
   persist_theme: ^1.5.1
   shared_preferences: ^0.5.3+2
   provider: ^3.0.0+1
-  scoped_model: ^1.0.1
   preferences: ^4.0.0
   #  firebase_core: ^0.4.0+9
   #  firebase_analytics: ^5.0.2
-  cupertino_icons: ^0.1.2
-  flutter_cupertino_localizations: ^1.0.1
+  # cupertino_icons: ^0.1.2
+  # flutter_cupertino_localizations: ^1.0.1
   flutter_typeahead: ^1.7.0
   loading_overlay: ^0.2.0
   native_color: ^1.0.0
