--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mhd_virtual_table
 description: App with list of virtual tables for MHD in Bratislava.
-version: 1.3.1
+version: 1.4.0
 authors:
   - magicsk.eu <support@magicsk.eu>
 
@@ -25,6 +25,7 @@ dependencies:
   connectivity: ^0.4.2
   persist_theme: ^1.5.1
   shared_preferences: ^0.5.3+2
+  localstorage: ^2.0.0
   provider: ^3.0.0+1
   preferences: ^4.0.0
   #  firebase_core: ^0.4.0+9
