--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mhd_virtual_table
 description: App with list of virtual tables for MHD in Bratislava.
-version: 1.4.0
+version: 1.4.1
 authors:
   - magicsk.eu <support@magicsk.eu>
 
@@ -12,40 +12,33 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.16.0
+  # intl: ^0.16.0
   flutter_webview_plugin: ^0.3.11
-  webview_flutter: ^0.3.9+1
-  permission_handler: "^3.1.0"
-  http: ^0.12.0+2
+  webview_flutter: ^1.0.7
+  permission_handler: ^5.0.1+1
+  http: ^0.12.2
   diacritic: ^0.1.1
   draggable_scrollbar: ^0.0.4
-  geolocator: ^5.0.0
-  path_provider: ^1.1.2
-  easy_alert: ^0.0.2
-  connectivity: ^0.4.2
-  persist_theme: ^1.5.1
-  shared_preferences: ^0.5.3+2
-  localstorage: ^2.0.0
-  provider: ^3.0.0+1
-  preferences: ^4.0.0
-  #  firebase_core: ^0.4.0+9
-  #  firebase_analytics: ^5.0.2
-  #  cupertino_icons: ^0.1.2
-  #  flutter_cupertino_localizations: ^1.0.1
-  flutter_typeahead: ^1.7.0
-  loading_overlay: ^0.2.0
-  native_color: ^1.0.0
+  geolocator: ^6.1.13
+  path_provider: ^1.6.24
+  easy_alert: ^0.0.8
+  connectivity: ^2.0.2
+  persist_theme: ^1.7.0
+  shared_preferences: ^0.5.12+4
+  localstorage: ^3.0.6+9
+  provider: ^4.3.2+3
+  preferences: ^5.2.1
+  flutter_typeahead: ^1.9.1
+  loading_overlay: ^0.2.1
+  native_color: ^1.2.0+1
   animated_list_view: ^0.1.1
   flutter_dotenv: ^2.1.0
-  url_launcher: ^5.4.5
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  intl_translation: ^0.17.5
-
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
+  # intl_translation: ^0.17.5
 
 # The following section is specific to Flutter.
 flutter:
@@ -57,35 +50,4 @@ flutter:
     - assets/google/powered_by_google_on_white.png
     - assets/google/2.0x/powered_by_google_on_white.png
     - assets/google/3.0x/powered_by_google_on_white.png
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
